--- a/drew.html
+++ b/drew.html
@@ -6,7 +6,9 @@
 <title>$DREW — Rise Together</title>
 
 <style>
-  :root { --drew-pink: #E81D89; }
+  :root {
+    --drew-pink: #E81D89;
+  }
 
   * {
     margin: 0;
@@ -14,76 +16,84 @@
     box-sizing: border-box;
   }
 
-  /* 🔥 Stable infinite wallpaper */
-  body {
-    min-height: 100%;
+  html, body {
     width: 100%;
+    min-height: 100%;
     font-family: system-ui, sans-serif;
     color: #fff;
     overflow-x: hidden;
-    background: url("peacockedit.jpeg") top center / cover repeat-y fixed;
     position: relative;
   }
 
-  /* Soft fade at bottom of image to hide repeats */
-  body::after {
+  /* NEW: Double mirrored wallpaper */
+  .bg-wallpaper {
+    position: fixed;
+    inset: 0;
+    z-index: -3;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .bg-top,
+  .bg-bottom {
+    flex: 1;
+    background-image: url("peacockedit.jpeg");
+    background-size: cover;
+    background-position: center;
+  }
+
+  /* Mirror bottom half */
+  .bg-bottom {
+    transform: scaleY(-1);
+  }
+
+  /* Full screen overlay */
+  body::before {
     content: "";
     position: fixed;
     inset: 0;
-    background: linear-gradient(to bottom, rgba(0,0,0,0.15), rgba(0,0,0,0.9));
-    z-index: -1;
-    pointer-events: none;
+    background: rgba(0,0,0,0.78);
+    z-index: -2;
   }
 
-  /* Page layout */
   .page {
     position: relative;
-    width: 100%;
+    z-index: 1;
     padding: 10vh 6vw 12vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 38px;
-    backdrop-filter: blur(2px);
-  }
-
-  /* Floating Drew Animation */
-  .drew-float {
-    width: 200px;
-    margin-bottom: -40px;
-    animation: hover 3s ease-in-out infinite;
-    filter: drop-shadow(0 0 20px var(--drew-pink));
-  }
-  @keyframes hover {
-    0%,100% { transform: translateY(0); }
-    50% { transform: translateY(-10px); }
   }
 
   .heading {
     font-size: clamp(48px, 8vw, 100px);
     font-weight: 900;
+    letter-spacing: 0.05em;
     color: var(--drew-pink);
-    text-align: center;
-    text-transform: uppercase;
     text-shadow:
       0 0 14px rgba(232,29,137,0.9),
-      0 0 36px rgba(232,29,137,0.6),
-      0 0 60px rgba(232,29,137,0.4);
+      0 0 36px rgba(232,29,137,0.6);
+    text-align: center;
+    text-transform: uppercase;
   }
 
   .divider {
     width: 160px;
     height: 4px;
-    background: var(--drew-pink);
     border-radius: 4px;
-    box-shadow: 0 0 12px rgba(232,29,137,0.95);
+    background: var(--drew-pink);
+    box-shadow:
+      0 0 12px rgba(232,29,137,0.95),
+      0 0 32px rgba(232,29,137,0.6);
   }
 
   .subheading {
-    font-size: clamp(15px, 2vw, 21px);
-    line-height: 1.6;
+    font-size: clamp(15px, 1.9vw, 21px);
     max-width: 900px;
     text-align: center;
+    opacity: 0.95;
+    line-height: 1.6;
   }
 
   .cards {
@@ -95,34 +105,38 @@
   }
 
   .card {
-    background: rgba(0,0,0,0.75);
+    background: rgba(0,0,0,0.9);
     border-radius: 14px;
     padding: 26px;
     text-align: center;
     border: 1px solid rgba(232,29,137,0.65);
-    backdrop-filter: blur(6px);
+    box-shadow:
+      0 0 14px rgba(232,29,137,0.55),
+      0 0 30px rgba(232,29,137,0.28);
   }
 
-  /* Roadmap */
   .roadmap-title {
     font-size: clamp(34px, 6vw, 62px);
     font-weight: 900;
     color: var(--drew-pink);
-    text-align: center;
     text-transform: uppercase;
-    margin-top: 14px;
     text-shadow: 0 0 20px rgba(232,29,137,0.8);
+    text-align: center;
+    margin-top: 14px;
   }
 
   .phase-block {
     width: 100%;
     max-width: 900px;
-    background: rgba(10,10,10,0.72);
+    background: rgba(10,10,10,0.88);
     border-radius: 16px;
     border: 2px solid var(--drew-pink);
     padding: 22px 20px;
     text-align: center;
-    backdrop-filter: blur(5px);
+    box-shadow:
+      0 0 18px rgba(232,29,137,0.5),
+      0 0 45px rgba(232,29,137,0.3);
+    margin-bottom: 20px;
   }
 
   .phase-number {
@@ -135,16 +149,16 @@
     font-size: 40px;
     color: var(--drew-pink);
     text-shadow: 0 0 15px rgba(232,29,137,0.8);
-    margin: 10px 0;
+    margin: -8px 0 18px;
   }
 
   .future-title {
     font-size: 24px;
     color: var(--drew-pink);
     font-weight: 700;
-    text-transform: uppercase;
     text-align: center;
     text-shadow: 0 0 12px rgba(232,29,137,0.7);
+    text-transform: uppercase;
     margin-top: 30px;
   }
 
@@ -156,17 +170,18 @@
     opacity: 0.9;
     line-height: 1.75;
   }
-
 </style>
 </head>
 
 <body>
 
-<div class="page">
+<!-- MIRRORED WALLPAPER BACKGROUND -->
+<div class="bg-wallpaper">
+  <div class="bg-top"></div>
+  <div class="bg-bottom"></div>
+</div>
 
-  <video class="drew-float" autoplay muted loop playsinline>
-    <source src="drew-animation.mp4" type="video/mp4">
-  </video>
+<div class="page">
 
   <div class="heading">$DREW</div>
   <div class="divider"></div>
@@ -177,17 +192,17 @@
   </div>
 
   <div class="cards">
-    <div class="card">
+    <section class="card">
       $DREW is a community-driven token with a purpose:<br>
       to spark a ripple effect through the minds of men —<br>
       reminding us we are all in this beautiful work of art together.
-    </div>
+    </section>
 
-    <div class="card">
+    <section class="card">
       The future of $DREW is shaped by its holders.<br>
       NFT & token holders vote on every step of the project,<br>
       strengthening a movement for men’s mental health.
-    </div>
+    </section>
   </div>
 
   <div class="roadmap-title">Roadmap</div>
@@ -216,6 +231,7 @@
   </div>
 
   <div class="future-title">Down The Road</div>
+
   <ul class="future-list">
     <li>• Collection 2 & 3 — Additional NFT Drops</li>
     <li>• “The Pit” — Future Utility & Expansion</li>
