--- a/drew.html
+++ b/drew.html
@@ -6,9 +6,7 @@
 <title>$DREW — Rise Together</title>
 
 <style>
-  :root {
-    --drew-pink: #E81D89;
-  }
+  :root { --drew-pink: #E81D89; }
 
   * {
     margin: 0;
@@ -22,80 +20,64 @@
     font-family: system-ui, sans-serif;
     color: #fff;
     overflow-x: hidden;
-    position: relative;
   }
 
-  /* NEW: Double mirrored wallpaper */
-  .bg-wallpaper {
-    position: fixed;
-    inset: 0;
-    z-index: -3;
-    display: flex;
-    flex-direction: column;
+  /* 🔥 Infinite wallpaper background — mobile safe */
+  body {
+    background: url("peacockedit.jpeg") center top / cover repeat-y;
   }
 
-  .bg-top,
-  .bg-bottom {
-    flex: 1;
-    background-image: url("peacockedit.jpeg");
-    background-size: cover;
-    background-position: center;
-  }
-
-  /* Mirror bottom half */
-  .bg-bottom {
-    transform: scaleY(-1);
-  }
-
-  /* Full screen overlay */
+  /* Light overlay to maintain readability */
   body::before {
     content: "";
     position: fixed;
     inset: 0;
-    background: rgba(0,0,0,0.78);
-    z-index: -2;
+    background: rgba(0,0,0,0.45);
+    pointer-events: none;
+    z-index: -1;
   }
 
+  /* Page wrapper */
   .page {
-    position: relative;
-    z-index: 1;
-    padding: 10vh 6vw 12vh;
+    width: 100%;
+    padding: 10vh 6vw 14vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 38px;
+    position: relative;
   }
 
+  /* Title & style */
   .heading {
     font-size: clamp(48px, 8vw, 100px);
     font-weight: 900;
-    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    text-align: center;
     color: var(--drew-pink);
     text-shadow:
       0 0 14px rgba(232,29,137,0.9),
-      0 0 36px rgba(232,29,137,0.6);
-    text-align: center;
-    text-transform: uppercase;
+      0 0 36px rgba(232,29,137,0.6),
+      0 0 60px rgba(232,29,137,0.4);
   }
 
   .divider {
     width: 160px;
     height: 4px;
-    border-radius: 4px;
     background: var(--drew-pink);
-    box-shadow:
-      0 0 12px rgba(232,29,137,0.95),
-      0 0 32px rgba(232,29,137,0.6);
+    border-radius: 6px;
+    box-shadow: 0 0 14px rgba(232,29,137,0.95);
   }
 
   .subheading {
-    font-size: clamp(15px, 1.9vw, 21px);
     max-width: 900px;
     text-align: center;
-    opacity: 0.95;
     line-height: 1.6;
+    font-size: clamp(15px, 2vw, 21px);
+    opacity: 0.98;
   }
 
+  /* Content cards */
   .cards {
     width: 100%;
     max-width: 900px;
@@ -105,81 +87,78 @@
   }
 
   .card {
-    background: rgba(0,0,0,0.9);
+    background: rgba(0,0,0,0.55);
     border-radius: 14px;
     padding: 26px;
     text-align: center;
-    border: 1px solid rgba(232,29,137,0.65);
-    box-shadow:
-      0 0 14px rgba(232,29,137,0.55),
-      0 0 30px rgba(232,29,137,0.28);
+    border: 1px solid rgba(232,29,137,0.7);
+    backdrop-filter: blur(7px);
+    font-size: 17px;
+    line-height: 1.6;
   }
 
+  /* Roadmap */
   .roadmap-title {
     font-size: clamp(34px, 6vw, 62px);
     font-weight: 900;
-    color: var(--drew-pink);
     text-transform: uppercase;
-    text-shadow: 0 0 20px rgba(232,29,137,0.8);
+    color: var(--drew-pink);
     text-align: center;
-    margin-top: 14px;
+    text-shadow: 0 0 18px rgba(232,29,137,0.8);
+    margin-top: 12px;
   }
 
   .phase-block {
     width: 100%;
     max-width: 900px;
-    background: rgba(10,10,10,0.88);
+    background: rgba(10,10,10,0.55);
     border-radius: 16px;
     border: 2px solid var(--drew-pink);
     padding: 22px 20px;
     text-align: center;
-    box-shadow:
-      0 0 18px rgba(232,29,137,0.5),
-      0 0 45px rgba(232,29,137,0.3);
-    margin-bottom: 20px;
+    backdrop-filter: blur(6px);
+    font-size: 17px;
+    line-height: 1.5;
   }
 
   .phase-number {
     font-size: 30px;
     font-weight: 800;
     color: var(--drew-pink);
+    margin-bottom: 6px;
   }
 
   .arrow {
     font-size: 40px;
+    text-align: center;
     color: var(--drew-pink);
     text-shadow: 0 0 15px rgba(232,29,137,0.8);
-    margin: -8px 0 18px;
+    margin: 10px 0;
   }
 
   .future-title {
     font-size: 24px;
-    color: var(--drew-pink);
     font-weight: 700;
-    text-align: center;
-    text-shadow: 0 0 12px rgba(232,29,137,0.7);
     text-transform: uppercase;
-    margin-top: 30px;
+    color: var(--drew-pink);
+    text-align: center;
+    margin-top: 28px;
+    text-shadow: 0 0 12px rgba(232,29,137,0.7);
   }
 
   .future-list {
     list-style: none;
     padding: 0;
     text-align: center;
+    opacity: 0.95;
     font-size: 17px;
-    opacity: 0.9;
     line-height: 1.75;
   }
+
 </style>
 </head>
 
 <body>
-
-<!-- MIRRORED WALLPAPER BACKGROUND -->
-<div class="bg-wallpaper">
-  <div class="bg-top"></div>
-  <div class="bg-bottom"></div>
-</div>
 
 <div class="page">
 
@@ -192,17 +171,19 @@
   </div>
 
   <div class="cards">
-    <section class="card">
+
+    <div class="card">
       $DREW is a community-driven token with a purpose:<br>
       to spark a ripple effect through the minds of men —<br>
       reminding us we are all in this beautiful work of art together.
-    </section>
+    </div>
 
-    <section class="card">
+    <div class="card">
       The future of $DREW is shaped by its holders.<br>
       NFT & token holders vote on every step of the project,<br>
       strengthening a movement for men’s mental health.
-    </section>
+    </div>
+
   </div>
 
   <div class="roadmap-title">Roadmap</div>
@@ -231,7 +212,6 @@
   </div>
 
   <div class="future-title">Down The Road</div>
-
   <ul class="future-list">
     <li>• Collection 2 & 3 — Additional NFT Drops</li>
     <li>• “The Pit” — Future Utility & Expansion</li>
