--- a/drew.html
+++ b/drew.html
@@ -6,7 +6,9 @@
 <title>$DREW — Rise Together</title>
 
 <style>
-  :root { --drew-pink: #E81D89; }
+  :root {
+    --drew-pink: #E81D89;
+  }
 
   * {
     margin: 0;
@@ -20,64 +22,79 @@
     font-family: system-ui, sans-serif;
     color: #fff;
     overflow-x: hidden;
+    position: relative;
   }
 
-  /* 🔥 Infinite wallpaper background — mobile safe */
-  body {
-    background: url("peacockedit.jpeg") center top / cover repeat-y;
+  /* ORIGINAL WALLPAPER — same as you had it */
+  .bg-wallpaper {
+    position: fixed;
+    inset: 0;
+    z-index: -3;
+    display: flex;
+    flex-direction: column;
   }
 
-  /* Light overlay to maintain readability */
+  .bg-top,
+  .bg-bottom {
+    flex: 1;
+    background-image: url("peacockedit.jpeg");
+    background-size: cover;
+    background-position: center;
+  }
+
+  .bg-bottom {
+    transform: scaleY(-1);
+  }
+
+  /* LIGHTER overlay so wallpaper is visible */
   body::before {
     content: "";
     position: fixed;
     inset: 0;
-    background: rgba(0,0,0,0.45);
-    pointer-events: none;
+    background: rgba(0,0,0,0.35); /* IMPORTANT CHANGE */
     z-index: -1;
   }
 
-  /* Page wrapper */
   .page {
-    width: 100%;
-    padding: 10vh 6vw 14vh;
+    position: relative;
+    z-index: 1;
+    padding: 10vh 6vw 12vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 38px;
-    position: relative;
   }
 
-  /* Title & style */
+  /* TITLE */
   .heading {
     font-size: clamp(48px, 8vw, 100px);
     font-weight: 900;
-    text-transform: uppercase;
-    text-align: center;
+    letter-spacing: 0.05em;
     color: var(--drew-pink);
     text-shadow:
       0 0 14px rgba(232,29,137,0.9),
-      0 0 36px rgba(232,29,137,0.6),
-      0 0 60px rgba(232,29,137,0.4);
+      0 0 36px rgba(232,29,137,0.6);
+    text-align: center;
+    text-transform: uppercase;
   }
 
   .divider {
     width: 160px;
     height: 4px;
+    border-radius: 4px;
     background: var(--drew-pink);
-    border-radius: 6px;
-    box-shadow: 0 0 14px rgba(232,29,137,0.95);
+    box-shadow: 0 0 12px rgba(232,29,137,0.95);
   }
 
   .subheading {
+    font-size: clamp(15px, 1.9vw, 21px);
     max-width: 900px;
     text-align: center;
+    opacity: 0.95;
     line-height: 1.6;
-    font-size: clamp(15px, 2vw, 21px);
-    opacity: 0.98;
   }
 
-  /* Content cards */
+  /* CLEAN GLASS CARDS — background visible behind */
   .cards {
     width: 100%;
     max-width: 900px;
@@ -87,50 +104,51 @@
   }
 
   .card {
-    background: rgba(0,0,0,0.55);
+    background: rgba(0,0,0,0.45); /* TRANSPARENCY FIX */
     border-radius: 14px;
     padding: 26px;
     text-align: center;
     border: 1px solid rgba(232,29,137,0.7);
-    backdrop-filter: blur(7px);
-    font-size: 17px;
-    line-height: 1.6;
+    backdrop-filter: blur(6px);
+    box-shadow:
+      0 0 10px rgba(232,29,137,0.35),
+      0 0 22px rgba(232,29,137,0.15);
   }
 
-  /* Roadmap */
+  /* ROADMAP */
   .roadmap-title {
     font-size: clamp(34px, 6vw, 62px);
     font-weight: 900;
-    text-transform: uppercase;
     color: var(--drew-pink);
+    text-transform: uppercase;
     text-align: center;
-    text-shadow: 0 0 18px rgba(232,29,137,0.8);
-    margin-top: 12px;
+    margin-top: 14px;
+    text-shadow: 0 0 20px rgba(232,29,137,0.8);
   }
 
   .phase-block {
     width: 100%;
     max-width: 900px;
-    background: rgba(10,10,10,0.55);
+    background: rgba(10,10,10,0.45); /* SAME TRANSPARENCY FIX */
     border-radius: 16px;
     border: 2px solid var(--drew-pink);
     padding: 22px 20px;
     text-align: center;
     backdrop-filter: blur(6px);
-    font-size: 17px;
-    line-height: 1.5;
+    box-shadow:
+      0 0 10px rgba(232,29,137,0.35),
+      0 0 22px rgba(232,29,137,0.15);
   }
 
   .phase-number {
     font-size: 30px;
     font-weight: 800;
     color: var(--drew-pink);
-    margin-bottom: 6px;
+    margin-bottom: 5px;
   }
 
   .arrow {
     font-size: 40px;
-    text-align: center;
     color: var(--drew-pink);
     text-shadow: 0 0 15px rgba(232,29,137,0.8);
     margin: 10px 0;
@@ -138,27 +156,32 @@
 
   .future-title {
     font-size: 24px;
-    font-weight: 700;
-    text-transform: uppercase;
     color: var(--drew-pink);
+    font-weight: 700;
     text-align: center;
-    margin-top: 28px;
     text-shadow: 0 0 12px rgba(232,29,137,0.7);
+    text-transform: uppercase;
+    margin-top: 30px;
   }
 
   .future-list {
     list-style: none;
     padding: 0;
     text-align: center;
-    opacity: 0.95;
     font-size: 17px;
+    opacity: 0.95;
     line-height: 1.75;
   }
-
 </style>
 </head>
 
 <body>
+
+<!-- ORIGINAL background setup kept just like you wanted -->
+<div class="bg-wallpaper">
+  <div class="bg-top"></div>
+  <div class="bg-bottom"></div>
+</div>
 
 <div class="page">
 
@@ -171,19 +194,17 @@
   </div>
 
   <div class="cards">
-
-    <div class="card">
+    <section class="card">
       $DREW is a community-driven token with a purpose:<br>
       to spark a ripple effect through the minds of men —<br>
       reminding us we are all in this beautiful work of art together.
-    </div>
+    </section>
 
-    <div class="card">
+    <section class="card">
       The future of $DREW is shaped by its holders.<br>
       NFT & token holders vote on every step of the project,<br>
       strengthening a movement for men’s mental health.
-    </div>
-
+    </section>
   </div>
 
   <div class="roadmap-title">Roadmap</div>
