--- a/drew.html
+++ b/drew.html
@@ -6,9 +6,7 @@
 <title>$DREW — Rise Together</title>
 
 <style>
-  :root {
-    --drew-pink: #E81D89;
-  }
+  :root { --drew-pink: #E81D89; }
 
   * {
     margin: 0;
@@ -22,79 +20,61 @@
     font-family: system-ui, sans-serif;
     color: #fff;
     overflow-x: hidden;
-    position: relative;
   }
 
-  /* ORIGINAL WALLPAPER — same as you had it */
-  .bg-wallpaper {
-    position: fixed;
-    inset: 0;
-    z-index: -3;
-    display: flex;
-    flex-direction: column;
+  /* 🔥 The REAL FIX — wallpaper everywhere */
+  body {
+    background: url("peacockedit.jpeg") center top / cover repeat-y fixed;
   }
 
-  .bg-top,
-  .bg-bottom {
-    flex: 1;
-    background-image: url("peacockedit.jpeg");
-    background-size: cover;
-    background-position: center;
-  }
-
-  .bg-bottom {
-    transform: scaleY(-1);
-  }
-
-  /* LIGHTER overlay so wallpaper is visible */
+  /* Slight overlay so text is readable but art visible */
   body::before {
     content: "";
     position: fixed;
     inset: 0;
-    background: rgba(0,0,0,0.35); /* IMPORTANT CHANGE */
+    background: rgba(0,0,0,0.35);
+    pointer-events: none;
     z-index: -1;
   }
 
   .page {
-    position: relative;
-    z-index: 1;
-    padding: 10vh 6vw 12vh;
+    width: 100%;
+    padding: 10vh 6vw 14vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 38px;
   }
 
-  /* TITLE */
+  /* Heading */
   .heading {
     font-size: clamp(48px, 8vw, 100px);
     font-weight: 900;
-    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    text-align: center;
     color: var(--drew-pink);
     text-shadow:
       0 0 14px rgba(232,29,137,0.9),
       0 0 36px rgba(232,29,137,0.6);
-    text-align: center;
-    text-transform: uppercase;
   }
 
   .divider {
     width: 160px;
     height: 4px;
-    border-radius: 4px;
+    border-radius: 6px;
     background: var(--drew-pink);
     box-shadow: 0 0 12px rgba(232,29,137,0.95);
   }
 
   .subheading {
-    font-size: clamp(15px, 1.9vw, 21px);
     max-width: 900px;
     text-align: center;
-    opacity: 0.95;
     line-height: 1.6;
+    font-size: clamp(15px, 2vw, 21px);
+    opacity: 0.98;
   }
 
-  /* CLEAN GLASS CARDS — background visible behind */
+  /* Transparent Glass Cards */
   .cards {
     width: 100%;
     max-width: 900px;
@@ -104,7 +84,7 @@
   }
 
   .card {
-    background: rgba(0,0,0,0.45); /* TRANSPARENCY FIX */
+    background: rgba(0,0,0,0.4);
     border-radius: 14px;
     padding: 26px;
     text-align: center;
@@ -115,40 +95,35 @@
       0 0 22px rgba(232,29,137,0.15);
   }
 
-  /* ROADMAP */
   .roadmap-title {
     font-size: clamp(34px, 6vw, 62px);
     font-weight: 900;
     color: var(--drew-pink);
+    text-shadow: 0 0 20px rgba(232,29,137,0.8);
     text-transform: uppercase;
     text-align: center;
-    margin-top: 14px;
-    text-shadow: 0 0 20px rgba(232,29,137,0.8);
   }
 
   .phase-block {
     width: 100%;
     max-width: 900px;
-    background: rgba(10,10,10,0.45); /* SAME TRANSPARENCY FIX */
+    background: rgba(10,10,10,0.4);
     border-radius: 16px;
     border: 2px solid var(--drew-pink);
     padding: 22px 20px;
     text-align: center;
     backdrop-filter: blur(6px);
-    box-shadow:
-      0 0 10px rgba(232,29,137,0.35),
-      0 0 22px rgba(232,29,137,0.15);
   }
 
   .phase-number {
     font-size: 30px;
     font-weight: 800;
     color: var(--drew-pink);
-    margin-bottom: 5px;
   }
 
   .arrow {
     font-size: 40px;
+    text-align: center;
     color: var(--drew-pink);
     text-shadow: 0 0 15px rgba(232,29,137,0.8);
     margin: 10px 0;
@@ -156,32 +131,26 @@
 
   .future-title {
     font-size: 24px;
-    color: var(--drew-pink);
     font-weight: 700;
-    text-align: center;
+    color: var(--drew-pink);
     text-shadow: 0 0 12px rgba(232,29,137,0.7);
+    text-align: center;
     text-transform: uppercase;
-    margin-top: 30px;
   }
 
   .future-list {
     list-style: none;
     padding: 0;
     text-align: center;
-    font-size: 17px;
     opacity: 0.95;
+    font-size: 17px;
     line-height: 1.75;
   }
+
 </style>
 </head>
 
 <body>
-
-<!-- ORIGINAL background setup kept just like you wanted -->
-<div class="bg-wallpaper">
-  <div class="bg-top"></div>
-  <div class="bg-bottom"></div>
-</div>
 
 <div class="page">
 
@@ -194,17 +163,17 @@
   </div>
 
   <div class="cards">
-    <section class="card">
+    <div class="card">
       $DREW is a community-driven token with a purpose:<br>
       to spark a ripple effect through the minds of men —<br>
       reminding us we are all in this beautiful work of art together.
-    </section>
+    </div>
 
-    <section class="card">
+    <div class="card">
       The future of $DREW is shaped by its holders.<br>
       NFT & token holders vote on every step of the project,<br>
       strengthening a movement for men’s mental health.
-    </section>
+    </div>
   </div>
 
   <div class="roadmap-title">Roadmap</div>
