--- a/drew.html
+++ b/drew.html
@@ -20,61 +20,80 @@
     font-family: system-ui, sans-serif;
     color: #fff;
     overflow-x: hidden;
+    position: relative;
   }
 
-  /* 🔥 The REAL FIX — wallpaper everywhere */
-  body {
-    background: url("peacockedit.jpeg") center top / cover repeat-y fixed;
+  /* ORIGINAL WALLPAPER SETUP — unchanged */
+  .bg-wallpaper {
+    position: fixed;
+    inset: 0;
+    z-index: -3;
+    display: flex;
+    flex-direction: column;
   }
 
-  /* Slight overlay so text is readable but art visible */
+  .bg-top,
+  .bg-bottom {
+    flex: 1;
+    background-image: url("peacockedit.jpeg");
+    background-size: cover;
+    background-position: center;
+  }
+
+  .bg-bottom {
+    transform: scaleY(-1);
+  }
+
+  /* 🔥 LIGHTER overlay so wallpaper is always visible */
   body::before {
     content: "";
     position: fixed;
     inset: 0;
-    background: rgba(0,0,0,0.35);
-    pointer-events: none;
+    background: rgba(0,0,0,0.30); /* REDUCED DARKNESS */
+    backdrop-filter: blur(4px);
     z-index: -1;
   }
 
   .page {
-    width: 100%;
-    padding: 10vh 6vw 14vh;
+    position: relative;
+    z-index: 1;
+    padding: 10vh 6vw 12vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 38px;
   }
 
-  /* Heading */
+  /* HEADING */
   .heading {
     font-size: clamp(48px, 8vw, 100px);
     font-weight: 900;
     text-transform: uppercase;
+    letter-spacing: 0.05em;
     text-align: center;
     color: var(--drew-pink);
     text-shadow:
-      0 0 14px rgba(232,29,137,0.9),
-      0 0 36px rgba(232,29,137,0.6);
+      0 0 14px rgba(232,29,137,1),
+      0 0 36px rgba(232,29,137,0.8);
   }
 
   .divider {
     width: 160px;
     height: 4px;
-    border-radius: 6px;
     background: var(--drew-pink);
-    box-shadow: 0 0 12px rgba(232,29,137,0.95);
+    border-radius: 6px;
+    box-shadow: 0 0 14px rgba(232,29,137,1);
   }
 
   .subheading {
     max-width: 900px;
     text-align: center;
+    opacity: 0.95;
     line-height: 1.6;
     font-size: clamp(15px, 2vw, 21px);
-    opacity: 0.98;
   }
 
-  /* Transparent Glass Cards */
+  /* TRANSPARENT GLASS CARDS — fixed here */
   .cards {
     width: 100%;
     max-width: 900px;
@@ -84,15 +103,15 @@
   }
 
   .card {
-    background: rgba(0,0,0,0.4);
+    background: rgba(0,0,0,0.33); /* more transparent */
     border-radius: 14px;
     padding: 26px;
     text-align: center;
-    border: 1px solid rgba(232,29,137,0.7);
+    border: 1px solid rgba(232,29,137,0.75);
     backdrop-filter: blur(6px);
     box-shadow:
-      0 0 10px rgba(232,29,137,0.35),
-      0 0 22px rgba(232,29,137,0.15);
+      0 0 14px rgba(232,29,137,0.4),
+      0 0 30px rgba(232,29,137,0.2);
   }
 
   .roadmap-title {
@@ -107,7 +126,7 @@
   .phase-block {
     width: 100%;
     max-width: 900px;
-    background: rgba(10,10,10,0.4);
+    background: rgba(0,0,0,0.33); /* more transparent */
     border-radius: 16px;
     border: 2px solid var(--drew-pink);
     padding: 22px 20px;
@@ -131,26 +150,31 @@
 
   .future-title {
     font-size: 24px;
-    font-weight: 700;
     color: var(--drew-pink);
-    text-shadow: 0 0 12px rgba(232,29,137,0.7);
-    text-align: center;
+    font-weight: 700;
     text-transform: uppercase;
+    text-align: center;
+    text-shadow: 0 0 12px rgba(232,29,137,0.7);
+    margin-top: 30px;
   }
 
   .future-list {
     list-style: none;
     padding: 0;
-    text-align: center;
-    opacity: 0.95;
     font-size: 17px;
+    opacity: 0.95;
     line-height: 1.75;
+    text-align: center;
   }
-
 </style>
 </head>
 
 <body>
+
+<div class="bg-wallpaper">
+  <div class="bg-top"></div>
+  <div class="bg-bottom"></div>
+</div>
 
 <div class="page">
 
@@ -163,17 +187,17 @@
   </div>
 
   <div class="cards">
-    <div class="card">
+    <section class="card">
       $DREW is a community-driven token with a purpose:<br>
       to spark a ripple effect through the minds of men —<br>
       reminding us we are all in this beautiful work of art together.
-    </div>
+    </section>
 
-    <div class="card">
+    <section class="card">
       The future of $DREW is shaped by its holders.<br>
       NFT & token holders vote on every step of the project,<br>
       strengthening a movement for men’s mental health.
-    </div>
+    </section>
   </div>
 
   <div class="roadmap-title">Roadmap</div>
