--- a/drew.html
+++ b/drew.html
@@ -6,165 +6,172 @@
 <title>$DREW — Rise Together</title>
 
 <style>
-  :root { --drew-pink: #E81D89; }
+:root { --drew-pink: #E81D89; }
 
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  html, body {
-    width: 100%;
-    min-height: 100%;
-    font-family: system-ui, sans-serif;
-    color: #fff;
-    overflow-x: hidden;
-    position: relative;
-  }
+html, body {
+  width: 100%;
+  min-height: 100%;
+  font-family: system-ui, sans-serif;
+  color: #fff;
+  overflow-x: hidden;
+  position: relative;
+}
 
-  /* ORIGINAL WALLPAPER SETUP — unchanged */
-  .bg-wallpaper {
-    position: fixed;
-    inset: 0;
-    z-index: -3;
-    display: flex;
-    flex-direction: column;
-  }
+/* Mirrored wallpaper — unchanged */
+.bg-wallpaper {
+  position: fixed;
+  inset: 0;
+  z-index: -3;
+  display: flex;
+  flex-direction: column;
+}
 
-  .bg-top,
-  .bg-bottom {
-    flex: 1;
-    background-image: url("peacockedit.jpeg");
-    background-size: cover;
-    background-position: center;
-  }
+.bg-top,
+.bg-bottom {
+  flex: 1;
+  background-image: url("peacockedit.jpeg");
+  background-size: cover;
+  background-position: center;
+}
 
-  .bg-bottom {
-    transform: scaleY(-1);
-  }
+.bg-bottom {
+  transform: scaleY(-1);
+}
 
-  /* 🔥 LIGHTER overlay so wallpaper is always visible */
-  body::before {
-    content: "";
-    position: fixed;
-    inset: 0;
-    background: rgba(0,0,0,0.30); /* REDUCED DARKNESS */
-    backdrop-filter: blur(4px);
-    z-index: -1;
-  }
+/* Light overlay so wallpaper shows through */
+body::before {
+  content: "";
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.35); /* FIXED */
+  backdrop-filter: blur(4px);
+  z-index: -2;
+}
 
-  .page {
-    position: relative;
-    z-index: 1;
-    padding: 10vh 6vw 12vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 38px;
-  }
+.page {
+  position: relative;
+  z-index: 1;
+  padding: 10vh 6vw 12vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 38px;
+}
 
-  /* HEADING */
-  .heading {
-    font-size: clamp(48px, 8vw, 100px);
-    font-weight: 900;
-    text-transform: uppercase;
-    letter-spacing: 0.05em;
-    text-align: center;
-    color: var(--drew-pink);
-    text-shadow:
-      0 0 14px rgba(232,29,137,1),
-      0 0 36px rgba(232,29,137,0.8);
-  }
+.heading {
+  font-size: clamp(48px, 8vw, 100px);
+  font-weight: 900;
+  letter-spacing: 0.05em;
+  color: var(--drew-pink);
+  text-shadow:
+    0 0 14px rgba(232,29,137,0.9),
+    0 0 36px rgba(232,29,137,0.6);
+  text-align: center;
+  text-transform: uppercase;
+}
 
-  .divider {
-    width: 160px;
-    height: 4px;
-    background: var(--drew-pink);
-    border-radius: 6px;
-    box-shadow: 0 0 14px rgba(232,29,137,1);
-  }
+.divider {
+  width: 160px;
+  height: 4px;
+  border-radius: 4px;
+  background: var(--drew-pink);
+  box-shadow:
+    0 0 12px rgba(232,29,137,0.95),
+    0 0 32px rgba(232,29,137,0.6);
+}
 
-  .subheading {
-    max-width: 900px;
-    text-align: center;
-    opacity: 0.95;
-    line-height: 1.6;
-    font-size: clamp(15px, 2vw, 21px);
-  }
+.subheading {
+  font-size: clamp(15px, 1.9vw, 21px);
+  max-width: 900px;
+  text-align: center;
+  opacity: 0.95;
+  line-height: 1.6;
+}
 
-  /* TRANSPARENT GLASS CARDS — fixed here */
-  .cards {
-    width: 100%;
-    max-width: 900px;
-    display: flex;
-    flex-direction: column;
-    gap: 14px;
-  }
+.cards {
+  width: 100%;
+  max-width: 900px;
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+}
 
-  .card {
-    background: rgba(0,0,0,0.33); /* more transparent */
-    border-radius: 14px;
-    padding: 26px;
-    text-align: center;
-    border: 1px solid rgba(232,29,137,0.75);
-    backdrop-filter: blur(6px);
-    box-shadow:
-      0 0 14px rgba(232,29,137,0.4),
-      0 0 30px rgba(232,29,137,0.2);
-  }
+/* GLASS transparency */
+.card {
+  background: rgba(0,0,0,0.35); /* FIXED */
+  border-radius: 14px;
+  padding: 26px;
+  text-align: center;
+  border: 1px solid rgba(232,29,137,0.75);
+  backdrop-filter: blur(6px);
+  box-shadow:
+    0 0 14px rgba(232,29,137,0.35),
+    0 0 28px rgba(232,29,137,0.2);
+}
 
-  .roadmap-title {
-    font-size: clamp(34px, 6vw, 62px);
-    font-weight: 900;
-    color: var(--drew-pink);
-    text-shadow: 0 0 20px rgba(232,29,137,0.8);
-    text-transform: uppercase;
-    text-align: center;
-  }
+.roadmap-title {
+  font-size: clamp(34px, 6vw, 62px);
+  font-weight: 900;
+  color: var(--drew-pink);
+  text-transform: uppercase;
+  text-shadow: 0 0 20px rgba(232,29,137,0.8);
+  text-align: center;
+  margin-top: 14px;
+}
 
-  .phase-block {
-    width: 100%;
-    max-width: 900px;
-    background: rgba(0,0,0,0.33); /* more transparent */
-    border-radius: 16px;
-    border: 2px solid var(--drew-pink);
-    padding: 22px 20px;
-    text-align: center;
-    backdrop-filter: blur(6px);
-  }
+.phase-block {
+  width: 100%;
+  max-width: 900px;
+  background: rgba(0,0,0,0.35); /* FIXED */
+  border-radius: 16px;
+  border: 2px solid var(--drew-pink);
+  padding: 22px 20px;
+  text-align: center;
+  backdrop-filter: blur(6px);
+  box-shadow:
+    0 0 18px rgba(232,29,137,0.5),
+    0 0 45px rgba(232,29,137,0.3);
+  margin-bottom: 20px;
+}
 
-  .phase-number {
-    font-size: 30px;
-    font-weight: 800;
-    color: var(--drew-pink);
-  }
+.phase-number {
+  font-size: 30px;
+  font-weight: 800;
+  color: var(--drew-pink);
+}
 
-  .arrow {
-    font-size: 40px;
-    text-align: center;
-    color: var(--drew-pink);
-    text-shadow: 0 0 15px rgba(232,29,137,0.8);
-    margin: 10px 0;
-  }
+.arrow {
+  font-size: 40px;
+  color: var(--drew-pink);
+  text-shadow: 0 0 15px rgba(232,29,137,0.8);
+  margin: -8px 0 18px;
+}
 
-  .future-title {
-    font-size: 24px;
-    color: var(--drew-pink);
-    font-weight: 700;
-    text-transform: uppercase;
-    text-align: center;
-    text-shadow: 0 0 12px rgba(232,29,137,0.7);
-    margin-top: 30px;
-  }
+.future-title {
+  font-size: 24px;
+  color: var(--drew-pink);
+  font-weight: 700;
+  text-align: center;
+  text-shadow: 0 0 12px rgba(232,29,137,0.7);
+  text-transform: uppercase;
+  margin-top: 30px;
+}
 
-  .future-list {
-    list-style: none;
-    padding: 0;
-    font-size: 17px;
-    opacity: 0.95;
-    line-height: 1.75;
-    text-align: center;
+.future-list {
+  list-style: none;
+  padding: 0;
+  text-align: center;
+  font-size: 17px;
+  opacity: 0.9;
+  line-height: 1.75;
+}
+
   }
 </style>
 </head>
@@ -234,3 +241,4 @@
 </div>
 </body>
 </html>
+
